Mention workaround for deprecation of compound-expression-as-lvalue

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -238,7 +238,10 @@
         (a, b) = 2;
         </pre>
         <p>will not be accepted for C and Objective-C in a future
-        version.</p></li>
+        version. A possible non-intrusive workaround is the following:</p>
+        <pre>
+        (*(a, &b)) = 2;
+        </pre></li>
     <li>Several
 	<a href="http://gcc.gnu.org/onlinedocs/gcc/Other-Builtins.html#Other%20Builtins">
 	built-in functions</a> such as <code>__builtin_popcount</code>
