--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -240,7 +240,7 @@
         <p>will not be accepted for C and Objective-C in a future
         version. A possible non-intrusive workaround is the following:</p>
         <pre>
-        (*(a, &b)) = 2;
+        (*(a, &amp;b)) = 2;
         </pre></li>
     <li>Several
 	<a href="http://gcc.gnu.org/onlinedocs/gcc/Other-Builtins.html#Other%20Builtins">
