Fix & amend SH entry.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -211,8 +211,9 @@ names.
  </li>
  
  <li>sh
-  <br />Manufacturer: Renesas
-  <br />Exact chip name: SuperH
+  <br />Manufacturer: Renesas, or various licensed by SuperH Inc
+  <br />CPUs include: SH1, SH2, SH2-DSP, SH3, SH3-DSP, SH4, SH5 series.
+  <br /><a href="http://www.renesas.com/eng/products/mpumcu/32bit/sh/index.html">Renesas SuperH Processors</a>
   <br /><a href="http://www.superh.com/">SuperH Home Page</a>
   <br />GDB includes a simulator.
  </li>
@@ -544,6 +545,8 @@ names.
   V PowerPC ABI</a></li>
 
   <li><a href="http://www.arm.com/armwww.ns4/img/12-Technical+Specs-ARM+ELF+Specification+PDF/$File/ARMELFA08.pdf">ARM ELF ABI</a></li>
+
+  <li><a href="http://www.superh.com/documentation/documents.php?id=17">Download page for SH4 and SH5 ABI</a></li>
 
   <li><a href="http://www.eagercon.com/dwarf/dwarf3std.htm">DWARF 3
   drafts (formerly DWARF 2.1)</a></li>
