--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -234,6 +234,10 @@ particular releases or snapshots or the latest snapshot.  </p>
   <a href="http://gcc.gnu.org/bugzilla/show_bug.cgi?id=5911">bug 5911</a>,
   by breaking out the Ada runtime and utilities into a libada directory.</dd>
 
+  <dt>java-gui-branch</dt>
+  <dd>This is a temporary branch for development of java GUI libraries (AWT and
+  Swing) in the libjava directory.</dd>
+
 </dl>
 
 <h3><a name="olddevbranches">Inactive Development Branches</a></h3>
