Grammar fixes. By Stephan T. Lavavej <stl@caltech.edu>.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -100,13 +100,13 @@
           compiler.
 
 	  <p>Experiments made on i386 hardware showed an 11% speedup on
-	  <code>-O0</code> and a 7.5% speedup on <code>-O2</code> compilation of
+	  <code>-O0</code> and a 7.5% speedup on <code>-O2</code> compilation of a
 	  <a href="http://gcc.gnu.org/bugzilla/show_bug.cgi?id=8361">large C++
 	  testcase.</a></p></li>
       <li>New value profiling pass enabled via
           <code>-fprofile-values</code></li>
       <li>New value profile transformations pass enabled via <code>-fvpt</code>
-	  aimes to optimize some code sequences by exploiting knowledge about
+	  aims to optimize some code sequences by exploiting knowledge about
 	  value ranges or other properties of the operands.  At the moment a
 	  conversion of expensive divisions into cheaper operations has been
 	  implemented.</li>
@@ -116,7 +116,7 @@
     </li>
     <li>A new unit-at-a-time compilation scheme for C, Objective-C, C++ and
 	Java which is enabled via <code>-funit-at-a-time</code> (and implied by
-	<code>-O2</code>).  In this scheme whole file is parsed first and
+	<code>-O2</code>).  In this scheme a whole file is parsed first and
 	optimized later.  The following basic inter-procedural optimizations
 	are implemented:
     <ul>
@@ -126,14 +126,14 @@
       <li>On i386, these local functions use register parameter passing
           conventions.</li>
       <li>Reordering of functions in topological order of the call graph to
-	  enable better propagation of optimizing hints (such as stack
-	  alignment needed by function) in the back end.</li>
+	  enable better propagation of optimizing hints (such as the stack
+	  alignments needed by functions) in the back end.</li>
       <li>Call graph based out-of-order inlining heuristics which allows to
 	  limit overall compilation unit growth (<code>--param
 	  inline-unit-growth</code>).</li>
     </ul>
-      Overall, unit-at-a-time scheme cause 1.3% improvement for SPECint2000
-      benchmark on i386 architecture (AMD Athlon CPU).
+      Overall, the unit-at-a-time scheme produces a 1.3% improvement for the
+      SPECint2000 benchmark on the i386 architecture (AMD Athlon CPU).
     </li>
     <li>More realistic code size estimates used by inlining for C, Objective-C,
         C++ and Java.  The growth of large functions can now be limited via
@@ -465,7 +465,7 @@
         allowed friend declarations for <code>private</code> class members,
         for example.  See the ISO C++ Standard Committee's <a
         href="http://anubis.dkuug.dk/jtc1/sc22/wg21/docs/cwg_closed.html#209">defect
-        report #209.</a> for details.</li>
+        report #209</a> for details.</li>
 
     <li>Declaration of member functions of class templates as friends are
 	supported.  For example,
@@ -598,9 +598,9 @@
 <h3>Fortran</h3>
 
   <ul>
-    <li>Fortran improvements are listed in
+    <li>Fortran improvements are listed in the
     <a href="http://gcc.gnu.org/onlinedocs/g77/News.html">
-    the Fortran documentation</a>.</li>
+    Fortran documentation</a>.</li>
   </ul>
 
 <h2>New Targets and Target Specific Improvements</h2>
