--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -36,6 +36,7 @@ opposed to development snapshots).</p>
 <table border="1" cellspacing="0" cellpadding="5">
 <tr><th>Release</th><th>internal version</th><th>Release date</th></tr>
 
+<tr><td><a href="gcc-3.3/">GCC 3.3.3</a></td>   <td></td> <td>February 14, 2004</td></tr>
 <tr><td><a href="gcc-3.3/">GCC 3.3.2</a></td>   <td></td> <td>October 17, 2003</td></tr>
 <tr><td><a href="gcc-3.3/">GCC 3.3.1</a></td>   <td></td> <td>August 8, 2003</td></tr>
 <tr><td><a href="gcc-3.3/">GCC 3.3</a></td>   <td></td> <td>May 13, 2003</td></tr>
