--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -301,8 +301,10 @@ stages of development, branch points, and releases:</p>
   GCC 3.4 Stage 2 (ends October 15 2003)   GCC 3.3.2 release (October 17 2003)
        |                                        \
        v                                         v
-  GCC 3.4 Stage 3                          GCC 3.3.3 release (....)
-       |
+  GCC 3.4 Stage 3                          GCC 3.3.3 release (February 14 2004)
+       |                                          \
+       |                                           v
+       |                                   GCC 3.3.4 release (...)
        v
        +-- GCC 3.4 branch -------------->
        :
