Add link to Dan Kegel's crosstool page.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -43,6 +43,10 @@
   The V3 multi-vendor standard C++ ABI</a> is used in GCC releases 3.0 and
   above.</li>
 
+  <li><a href="http://kegel.com/crosstool/">
+  Compiling and testing complete gcc/glibc cross-toolchains for Linux
+  targets</a> by Dan Kegel.</li>
+
 </ul>
 
 
