--- a/htdocs/gcc-3.4/criteria.html
+++ b/htdocs/gcc-3.4/criteria.html
@@ -150,7 +150,7 @@ languages will be considered part of the release criteria:</p>
 <li>C</li>
 <li>C++</li>
 <li>Java</li>
-<li>Fortran</li>
+<li>Fortran 77</li>
 </ul>
 
 <p>The following languages will be supported by the release, but their
@@ -170,7 +170,7 @@ languages.</p>
 <h2>Regression Tests</h2>
 
 <p>The GCC testsuite contains extensive C and C++ regression tests, as
-well as some Fortran, and Objective-C tests.  GCC 3.4 will not fail
+well as some Fortran 77, and Objective-C tests.  GCC 3.4 will not fail
 any of these tests which the previous release GCC passed on any of the
 supported platforms.  In particular, the current regression testsuite
 will be run using GCC 3.3.3 on each of the supported platforms; those
@@ -238,7 +238,7 @@ shown here are used for GCC 3.4 integration testing.</p>
     <td>&nbsp;</td>
 </tr>
 <tr><td>LAPACK</td>
-    <td>Fortran</td>
+    <td>Fortran 77</td>
     <td>3.0</td>
     <td>&nbsp;</td>
     <td><a href="../testing/testing-lapack.html">build and test guide</a></td>
@@ -301,7 +301,7 @@ vitally important. Pooma-gcc is pooma-2.3.0 plus some scripts which
 simplify testing.</p>
 
 <p>LAPACK is a well known linear algebra package that contains code
-typical for large scale Fortran programs.</p>
+typical for large scale Fortran 77 programs.</p>
 
 <h3>Code Quality</h3>
 
@@ -322,7 +322,7 @@ quality:</p>
     <td><a href="ftp://ftp.kai.com/pub/benchmarks/stepanov_v1p2.C">
          stepanov_v1p2.C</a></td>
 </tr>
-<tr><td>LAPACK</td><td>Fortran</td>
+<tr><td>LAPACK</td><td>Fortran 77</td>
     <td><a href="http://www.netlib.org/lapack/lapack.tgz">
         LAPACK 3.0 (timing programs)</a></td>
 </tr>
@@ -376,7 +376,7 @@ following unit tests:</p>
     <td>&nbsp;</td>
 </tr>
 <tr><td>&nbsp;</td>
-    <td>Fortran</td>
+    <td>Fortran 77</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
