GCC no longer accepts the -fwritable-strings option.

--- a/htdocs/gcc-3.5/changes.html
+++ b/htdocs/gcc-3.5/changes.html
@@ -27,6 +27,9 @@
 	</ul>
 	You can disable generating location lists by
 	<code>-fno-var-tracking</code>.</li>
+    <li>GCC no longer accepts the <code>-fwritable-strings</code>
+        option.  Use named character arrays when you need a writable
+        string.</li>
   </ul>
 
 <h2>General Optimizer Improvements</h2>
