Bootstrap and test results for 3.3.3:
  alphaev6-dec-osf5.1 (Compaq Tru64 Unix; native cc, as, ld)
  hppa2.0w-hp-hpux11.00
  i686-pc-linux-gnu (Red Hat 7.2, binutils 2.14, glibc 2.2.4, kernel 2.4.7)
  ia64-unknown-linux-gnu (Red Hat Advanced Workstation 2.1, binutils 2.14,
     glibc 2.2.4, kernel 2.4.18)
  mips-sgi-irix6.5 (native cc, as, ld)
  powerpc-unknown_linux-gnu (Yellow Dog 3.0, glibc 2.3.2, kernel 2.6.3)
  sparc-sun-solaris2.8 (binutils 2.13.1)

Bootstrap for 3.3.3:

  powerpc-unknown-linux-gnu (hand-crafted, binutils 2.13.90, glibc 2.3.2,
    kernel 2.4.22-benh)

Test results for 3.3.3:

  alpha-unknown-linux-gnu
  arm-unknown-linux-gnu
  hppa-unknown-linux-gnu
  hppa2.0w-hp-hpux11.00
  hppa64-hp-hpux11.00
  i686-pc-linux-gnu
  mips-sgi-irix6.5
  mips-unknown-linux-gnu
  mipsel-unknown-linux-gnu
  s390-ibm-linux-gnu
  sparc-sun-solaris2.5.1
  sparc-sun-solaris2.7
  sparc-sun-solaris2.8
  sparc-unknown-linux-gnu
  sparc64-sun-solaris2.7

Bootstrap for 3.3.2:

  alphaev68-dec-osf5.1 (Tru64 5.1A)

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -71,6 +71,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>alpha-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00908.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00794.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00342.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01096.html">3.3</a>
@@ -79,9 +80,12 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>alphaev6-dec-osf5.1</td>
-<td>&nbsp;</td>
+<td>Compaq Tru64 Unix; native cc, as, ld</td>
 <td>Bootstrap (C, C++, ObjC, F77, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01253.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01642.html">3.3</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01155.html">3.3.3</a>
 </td>
 </tr>
 
@@ -111,6 +115,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>alphaev68-dec-osf5.1</td>
 <td>Tru64 5.1A</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01094.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00983.html">3.3.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00854.html">3.3.1</a>
@@ -121,6 +126,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>arm-unknown-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01160.html">3.3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00907.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00836.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00748.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00465.html">3.3.1</a>,
@@ -142,6 +149,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>hppa-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00905.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00805.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00751.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00458.html">3.3.1</a>,
@@ -173,6 +181,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01000.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00481.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00924.html">3.3</a>
 </td>
@@ -182,9 +191,11 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>as and ld from binutils 2.13.1</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01137.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00503.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01608.html">3.3</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00956.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00917.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00471.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00979.html">3.3</a>
@@ -195,6 +206,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>hppa64-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01057.html">3.3.3</a>.
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00522.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00950.html">3.3</a>
 </td>
@@ -363,6 +375,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01036.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-11/msg00572.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-11/msg00550.html">3.3.2</a>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00896.html">3.3.2</a>,
@@ -434,6 +447,15 @@ NOTE: the submitter reported that thread support is broken and asked
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00978.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00468.html">3.3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, binutils 2.14, glibc 2.2.4, kernel 2.4.7</td>
+<td><a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01137.html">3.3.3</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00845.html">3.3.3</a>
 </td>
 </tr>
 
@@ -576,6 +598,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>ia64-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01116.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00918.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00793.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00763.html">3.3.2</a>,
@@ -583,6 +606,17 @@ NOTE: the submitter reported that thread support is broken and asked
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00463.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00333.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01183.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>ia64-unknown-linux-gnu</td>
+<td>Red Hat Advanced Workstation 2.1, binutils 2.14, glibc 2.2.4,
+    kernel 2.4.18</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01137.html">3.3.3</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00959.html">3.3.3</a>
 </td>
 </tr>
 
@@ -607,11 +641,22 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>mips-sgi-irix6.5</td>
 <td>test runs for -mabi=64 and -mips4</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00910.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00758.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00275.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00942.html">3.3</a>
 </td>
 </tr>
+
+<tr>
+<td>mips-sgi-irix6.5</td>
+<td>native cc, as, ld</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01253.html">3.3.3</a>
+<br />Test results:
+<a hef="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01147.html">3.3.3</a>
+</td>
+</td>
 
 <tr>
 <td>mips-sgi-irix6.5</td>
@@ -622,6 +667,21 @@ NOTE: the submitter reported that thread support is broken and asked
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00297.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00896.html">3.3</a>
 </td>
+</tr>
+
+<tr>
+<td>mips-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00958.html">3.3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>mipsel-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00906.html">3.3.3</a>
 </tr>
 
 <tr>
@@ -695,6 +755,14 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<td>powerpc-ibm-aix5.1.0.0</td>
+<td>&nbsp;</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-01/msg01241.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix5.2.0.0</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
@@ -721,7 +789,15 @@ NOTE: the submitter reported that thread support is broken and asked
 
 <tr>
 <td>powerpc-unknown-linux-gnu</td>
-<td>YellowDog 2.3, glibc 2.2.5, binutils 2.13.90.0.4, kernel 2.4.20</td>
+<td>hand-crafted, binutils 2.13.90, glibc 2.3.2, kernel 2.4.22-benh</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01044.html">3.3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>Yellow Dog 2.3, glibc 2.2.5, binutils 2.13.90.0.4, kernel 2.4.20</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01552.html">3.3</a>
 </td>
@@ -729,7 +805,7 @@ NOTE: the submitter reported that thread support is broken and asked
 
 <tr>
 <td>powerpc-unknown-linux-gnu</td>
-<td>YellowDog 2.3, glibc 2.3.2, binutils 2.14.90.0.5, kernel 2.4.20</td>
+<td>Yellow Dog 2.3, glibc 2.3.2, binutils 2.14.90.0.5, kernel 2.4.20</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2003-10/msg00879.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00795.html">3.3.1</a>
@@ -737,9 +813,20 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<td>powerpc-unknown_linux-gnu</td>
+<td>Yellow Dog 3.0, glibc 2.3.2, kernel 2.6.3</td>
+<td>Bootstrap (C, C++, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01212.html">3.3.3</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01090.html">3.3.3</a>
+</td>
+</tr>
+
+<tr>
 <td>s390-ibm-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01009.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00792.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00345.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01356.html">3.3</a>
@@ -783,7 +870,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-sun-solaris2.5.1</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-11/msg00395.html">3.3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01159.html">3.3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-11/msg00395.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01166.html">3.3</a>
 </td>
 </tr>
@@ -809,6 +897,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-sun-solaris2.7</td>
 <td>test runs for -m64, -fPIC, and -fpic</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00911.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00762.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00301.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00944.html">3.3</a>
@@ -819,6 +908,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01151.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00504.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01406.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01178.html">3.3</a>,
@@ -840,8 +930,10 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-sun-solaris2.8</td>
 <td>binutils 2.13.1</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01137.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01608.html">3.3</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00977.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01232.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00980.html">3.3</a>
 </td>
@@ -877,6 +969,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-unknown-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00904.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00837.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00464.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01357.html">3.3</a>
@@ -913,6 +1006,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc64-sun-solaris2.7</td>
 <td>test runs for -m32, -fPIC, and -fpic</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00912.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00761.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00299.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00997.html">3.3</a>
