fix formatting error from previous commit

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -654,7 +654,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01253.html">3.3.3</a>
 <br />Test results:
-<a hef="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01147.html">3.3.3</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01147.html">3.3.3</a>
 </td>
 </td>
 
