--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -534,6 +534,14 @@ NOTE: the submitter reported that thread support is broken and asked
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Slackware 9.0, glibc 2.3.2, kernel 2.4.24</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-01/msg00812.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SuSE 7.0, glibc 2.1.3, kernel 2.2.16</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2003-06/msg00433.html">3.3</a>,
@@ -759,7 +767,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>powerpc-ibm-aix5.1.0.0</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
-<a href="http://gcc.gnu.org/ml/gcc/2004-01/msg01241.html">3.3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc/2004-01/msg01241.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2004-01/msg00488.html">3.3.2</a>
 </td>
 </tr>
 
@@ -924,6 +933,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01928.html">3.3</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01247.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-01/msg00972.html">3.3.2</a>
 </td>
 </tr>
 
