Note that -mapcs-26 on ARM is now obsolete.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -820,6 +820,11 @@
   <p>Also, some individual systems have been obsoleted:</p>
 
   <ul>
+    <li>ARM Family
+      <ul>
+	<li>Support for generating code for operation in APCS/26 mode
+	    (<code>-mapcs-26</code>).</li>
+      </ul></li>
     <li>IBM ESA/390
       <ul>
         <li>"Bigfoot" port, <code>i370-*</code>.  (The other port,
