Update GCC 3.3.3 and add 3.4.0 and 3.4.1 entries.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -304,9 +304,15 @@ stages of development, branch points, and releases:</p>
   GCC 3.4 Stage 3                          GCC 3.3.3 release (February 14 2004)
        |                                          \
        |                                           v
-       |                                   GCC 3.3.4 release (...)
+       |                                   GCC 3.3.4 release (May 31st 2004)
        v
-       +-- GCC 3.4 branch -------------->
+       +-- GCC 3.4 branch created ------+
+       |                                 \
+       |                                  v
+       |                                   GCC 3.4.0 release (...)
+       |                                    \
+       |                                     v 
+       |                                   GCC 3.4.1 release (...)
        :
        v
 </pre>
