Announce the GCC 3.3.3 release. By Joe Buck <Joe.Buck@synopsys.COM>.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -87,6 +87,11 @@ to maintain and improve quality.</p>
 
 <dl>
 
+<dt><b>February 24, 2004</b></dt>
+<dd>
+<a href="gcc-3.3/">GCC 3.3.3</a> has been released.
+</dd>
+
 <dt><b>February 6, 2004</b></dt>
 <dd>
 Josef Zlomek of SUSE Labs and Daniel Berlin of IBM Research have contributed
