--- a/htdocs/gcc-3.3/index.html
+++ b/htdocs/gcc-3.3/index.html
@@ -8,10 +8,13 @@
 
 <h1>GCC 3.3 Release Series</h1>
 
-<p>October 16, 2003</p>
+<p>February 24, 2004</p>
 
 <p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
-developers are pleased to announce the release of GCC 3.3.2.</p>
+developers are pleased to announce the release of GCC 3.3.3.  This release
+was actually completed on February 14, but technical issues with the
+transition to new security measures for protecting FSF servers required a
+delay in the announcement.</p>
 
 <p>The GCC 3.3 release series includes numerous <a href="changes.html">new
 features, improvements, bug fixes, and other changes</a>, thanks to an <a
@@ -26,6 +29,10 @@ variety of targets and test packages.</p>
 <h2>Release History</h2>
 
 <dl>
+<dt>GCC 3.3.3</dt>
+<dd><a name="3.3.3">February 14, 2003</a>
+    (<a href="changes.html#3.3.3">changes</a>)
+</dd>
 <dt>GCC 3.3.2</dt>
 <dd><a name="3.3.2">October 16, 2003</a>
     (<a href="changes.html#3.3.2">changes</a>)
