--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -87,6 +87,18 @@ to maintain and improve quality.</p>
 
 <dl>
 
+<dt><b>February 25, 2004</b></dt>
+<dd>
+The <a href=http://gcc.gnu.org/projects/tree-ssa/>tree-ssa branch</a>
+has been frozen to be incorporated into GCC 3.5.0.  Tree SSA
+incorporates two new high-level intermediate languages (GENERIC and
+GIMPLE), an optimization framework for GIMPLE based on the Static
+Single Assignment (SSA) representation, several SSA-based optimizers
+and various other improvements to the internal structure of the
+compiler that allow new optimization opportunities that were difficult
+to implement before.
+</dd>
+
 <dt><b>February 24, 2004</b></dt>
 <dd>
 <a href="gcc-3.3/">GCC 3.3.3</a> has been released.
