--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -89,7 +89,7 @@ to maintain and improve quality.</p>
 
 <dt><b>February 25, 2004</b></dt>
 <dd>
-The <a href=http://gcc.gnu.org/projects/tree-ssa/>tree-ssa branch</a>
+The <a href="http://gcc.gnu.org/projects/tree-ssa/">tree-ssa branch</a>
 has been frozen to be incorporated into GCC 3.5.0.  Tree SSA
 incorporates two new high-level intermediate languages (GENERIC and
 GIMPLE), an optimization framework for GIMPLE based on the Static
