Avoid explicitly mentioning the number of SC members.

--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -22,8 +22,8 @@ committee.</p>
 
 <h2>GCC steering committee members</h2>
 
-<p>At the moment the steering committee has 14 members. The best place to
-reach them is the gcc <a href="lists.html">mailinglist</a>.</p>
+<p>The steering committee consists of the following members.  The best
+place to reach them is the gcc <a href="lists.html">mailinglist</a>.</p>
 
 <ul>
 <li>Per Bothner</li>
